--- a/embeddings/mainwindow.ui
+++ b/embeddings/mainwindow.ui
@@ -60,7 +60,7 @@
      </font>
     </property>
     <property name="layoutDirection">
-     <enum>Qt::LayoutDirection::LeftToRight</enum>
+     <enum>Qt::LeftToRight</enum>
     </property>
     <property name="styleSheet">
      <string notr="true">QWidget #Application {
@@ -202,9 +202,9 @@ rgb(0, 0, 0)
       <property name="geometry">
        <rect>
         <x>160</x>
-        <y>30</y>
-        <width>391</width>
-        <height>51</height>
+        <y>20</y>
+        <width>531</width>
+        <height>50</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -214,7 +214,7 @@ rgb(0, 0, 0)
        <string>WHITE: CHOOSE YOUR HOUSE!</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="pushButton_home1">
       <property name="geometry">
        <rect>
         <x>710</x>
@@ -231,9 +231,9 @@ rgb(0, 0, 0)
       <property name="geometry">
        <rect>
         <x>70</x>
-        <y>80</y>
+        <y>30</y>
         <width>551</width>
-        <height>328</height>
+        <height>466</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
@@ -250,6 +250,28 @@ rgb(0, 0, 0)
          </property>
          <property name="text">
           <string>Slytherin</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QPushButton" name="pushButton_Gryffindor">
+         <property name="minimumSize">
+          <size>
+           <width>150</width>
+           <height>150</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>150</width>
+           <height>150</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(255, 0, 0);</string>
+         </property>
+         <property name="text">
+          <string>Gryffindor</string>
          </property>
         </widget>
        </item>
@@ -297,28 +319,6 @@ rgb(0, 0, 0)
          </property>
         </widget>
        </item>
-       <item row="0" column="0">
-        <widget class="QPushButton" name="pushButton_Gryffindor">
-         <property name="minimumSize">
-          <size>
-           <width>150</width>
-           <height>150</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>150</width>
-           <height>150</height>
-          </size>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(255, 0, 0);</string>
-         </property>
-         <property name="text">
-          <string>Gryffindor</string>
-         </property>
-        </widget>
-       </item>
       </layout>
      </widget>
     </widget>
@@ -328,7 +328,7 @@ rgb(0, 0, 0)
        <rect>
         <x>150</x>
         <y>40</y>
-        <width>391</width>
+        <width>511</width>
         <height>51</height>
        </rect>
       </property>
@@ -433,11 +433,11 @@ rgb(0, 0, 0)
        </item>
       </layout>
      </widget>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="pushButton_home2">
       <property name="geometry">
        <rect>
         <x>700</x>
-        <y>420</y>
+        <y>430</y>
         <width>80</width>
         <height>18</height>
        </rect>
@@ -657,7 +657,7 @@ font: 900 12pt &quot;Segoe UI Black&quot;;</string>
      </property>
      <layout class="QGridLayout" name="gridLayout" columnstretch="0">
       <property name="sizeConstraint">
-       <enum>QLayout::SizeConstraint::SetNoConstraint</enum>
+       <enum>QLayout::SetNoConstraint</enum>
       </property>
       <property name="leftMargin">
        <number>10</number>
